# content-yt-idea-generator-crew-agent

./: README.md  pyproject.toml
src/youtube_idea_generator_crew/: crew.py  main.py
src/youtube_idea_generator_crew/config/: agents.yaml  tasks.yaml
src/youtube_idea_generator_crew/tools/: SearchYouTubeTool.py
