[project]
name = "youtube_idea_generator_crew"
version = "0.1.0"
description = "youtube-idea-generator-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
youtube_idea_generator_crew = "youtube_idea_generator_crew.main:run"
run_crew = "youtube_idea_generator_crew.main:run"
train = "youtube_idea_generator_crew.main:train"
replay = "youtube_idea_generator_crew.main:replay"
test = "youtube_idea_generator_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
